feat: endpoint 변경
