# api/handler/policy_handler.go
@@ -17,7 +17,7 @@ import (
 // @Success      200  {object}  domain.PolicyResponse
 // @Failure      401  {object}  domain.ErrorResponse  "인증되지 않은 사용자"
 // @Failure      500  {object}  domain.ErrorResponse  "서버 오류"
-// @Router       /policy/protected [get]
+// @Router       /policy/protected/region [get]
 func GetPoliciesInMyRegion(policyService domain.PolicyUseCase, profileService domain.ProfileUseCase) fiber.Handler {
 	return func(c fiber.Ctx) error {
 		ctx := c.RequestCtx()
@@ -48,6 +48,16 @@ func GetPoliciesInMyRegion(policyService domain.PolicyUseCase, profileService do
 	}
 }
 
+// GetAllPolicies
+// @Summary      정책 조회
+// @Description  정책 리스트 반환
+// @Tags         Policy
+// @Security     BearerAuth
+// @Produce      json
+// @Success      200  {object}  domain.PolicyResponse
+// @Failure      401  {object}  domain.ErrorResponse  "인증되지 않은 사용자"
+// @Failure      500  {object}  domain.ErrorResponse  "서버 오류"
+// @Router       /policy [get]
 func GetAllPolicies(policyService domain.PolicyUseCase) fiber.Handler {
 	return func(c fiber.Ctx) error {
 		ctx := c.RequestCtx()
